turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:20: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[6]]
                                          ^Turmite:106: error: ']' expected but '}' found.
}
^